# lista-compras

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/adapters/repositories/: mongo_item_repo.py  mongo_list_repo.py  mongo_member_repo.py  mongo_user_repo.py
backend/app/adapters/services/: bcrypt_hasher.py  jwt_token_service.py
backend/app/domain/entities/: list_item.py  list_member.py  shopping_list.py  user.py
backend/app/domain/exceptions/: conflict.py  forbidden.py  not_found.py
backend/app/domain/value_objects/: item_status.py  list_status.py  member_role.py
backend/app/infra/: config.py  main.py
backend/app/infra/db/: indexes.py  mongodb.py
backend/app/infra/http/dependencies/: auth.py  permissions.py
backend/app/infra/http/middleware/: security_headers.py
backend/app/infra/http/routers/: auth.py  items.py  lists.py  members.py  users.py  ws.py
backend/app/infra/http/schemas/: auth.py  item.py  (+1 more)
backend/app/infra/websocket/: connection_manager.py
backend/app/ports/repositories/: item_repository.py  list_repository.py  member_repository.py  user_repository.py
backend/app/ports/services/: password_hasher.py  token_service.py
backend/app/use_cases/auth/: login_user.py  register_user.py
backend/app/use_cases/items/: add_item.py  assign_item.py  delete_item.py  update_item_status.py
backend/app/use_cases/lists/: archive_list.py  create_list.py  delete_list.py  reuse_list.py
backend/app/use_cases/members/: invite_member.py  remove_member.py
(+49 files in other folders)
